k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finance-app
  labels:
    name: finance-app
